# concise-autotest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: diff.yml  regression.yml  remove_old_pr.yml  rerun.yml  rerun_checks.sh  update_shortnames.yml  verify.yml
tests/: collection_names.py  conftest.py  create_or_update_issue.py  get_associations.py  remove_prs.py  verify_collection.py
tests/cmr/concise/uat/: C1259115178-POCLOUD
