[tool.poetry]
name = "concise-autotest"
version = "0.1.0"
description = "Automated tests for new associations to concise service"
authors = ["PO.DAAC <podaac@jpl.nasa.gov>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "concise_autotest"}]

[tool.poetry.dependencies]
python = "^3.10"
python-cmr = "^0.13.0"
harmony-py = "^0.5.1"
matplotlib = "^3.7.2"
netCDF4 = "^1.6.4"
xarray = "^2024.9.0"
cf-xarray = "^0.10.0"
l2ss-py = "^2.12.0"
pygithub = "^2.4.0"
pytest-xdist = "^3.6.1"
tenacity = "^9.0.0"
groq = "^0.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-html = "^4.1.1"
pytest-timeout = "^2.1.0"

[tool.pytest.ini_options]
junit_logging = "log"
log_cli = "True"
log_cli_level = "INFO"
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cmr_association_diff = "concise_autotest.cmr_association_diff:run"
